# Matlab_ROS_PickPlace

./: LICENSE  README.md
Yaskawa_MotoMini_PickNPlace/ROSFiles/motoman_description/: CMakeLists.txt  package.xml
Yaskawa_MotoMini_PickNPlace/ROSFiles/motoman_description/launch/motomini/: motomini.launch  motomini_with_gripper.launch  motomini_with_kinectv2.launch
Yaskawa_MotoMini_PickNPlace/ROSFiles/motoman_description/launch/motomini/rviz/: motomini.rviz  motomini_with_kinectv2.rviz
Yaskawa_MotoMini_PickNPlace/ROSFiles/motoman_description/launch/sia20/: sia20.launch
Yaskawa_MotoMini_PickNPlace/ROSFiles/motoman_description/launch/sia20/rviz/: sia20.rviz
Yaskawa_MotoMini_PickNPlace/ROSFiles/motoman_description/meshes/sia20/base_link/: base_link.dae  collision.stl  visual.dae  visual.stl
Yaskawa_MotoMini_PickNPlace/ROSFiles/motoman_description/meshes/sia20/link_b/: collision.stl  visual.dae
Yaskawa_MotoMini_PickNPlace/ROSFiles/motoman_description/meshes/sia20/link_e/: collision.stl  visual.dae  visual.stl
Yaskawa_MotoMini_PickNPlace/ROSFiles/motoman_description/meshes/sia20/link_l/: collision.stl  visual.dae
Yaskawa_MotoMini_PickNPlace/ROSFiles/motoman_description/meshes/sia20/link_r/: collision.stl  visual.dae  visual.stl
Yaskawa_MotoMini_PickNPlace/ROSFiles/motoman_description/meshes/sia20/link_s/: collision.stl  visual.dae  (+1 more)
Yaskawa_MotoMini_PickNPlace/ROSFiles/motoman_description/meshes/tool/: finger.stl  finger_convex.stl  palm.stl  palm_convex.stl
Yaskawa_MotoMini_PickNPlace/ROSFiles/motoman_description/robots/motomini/: motomini.urdf  motomini.urdf.xacro  motomini_basic.urdf.xacro  motomini_with_gripper.urdf.xacro  motomini_with_gripper_and_4_kinects.urdf.xacro  motomini_with_gripper_and_multi_kinect.urdf.xacro  motomini_with_gripper_kinectv2.urdf.xacro  motomini_with_kinectv2.urdf.xacro
Yaskawa_MotoMini_PickNPlace/ROSFiles/motoman_description/robots/sia20/: property.xacro  sia20.urdf.xacro  sia20_basic.urdf.xacro
Yaskawa_MotoMini_PickNPlace/ROSFiles/motoman_description/robots/sia5/: sia5_with_multi_kinectv2.urdf.xacro
Yaskawa_MotoMini_PickNPlace/ROSFiles/motoman_description/urdf/: common.xacro  materials.xacro
Yaskawa_MotoMini_PickNPlace/ROSFiles/motoman_description/urdf/motomini/: body.gazebo.xacro  body.transmission.xacro  body.urdf.xacro
Yaskawa_MotoMini_PickNPlace/ROSFiles/motoman_description/urdf/tool/: gripper.gazebo.xacro  gripper.transmission.xacro  gripper.urdf.xacro  limits.urdf.xacro
(+321 files in other folders)
